Banner to 100vh - menu burger translate right to left - h3 bigger

--- a/equipment.html
+++ b/equipment.html
@@ -42,15 +42,9 @@
         <input type="search" />
       </div>
     </section>
-    <nav class="sticky-menu-article">
-      <ul class="sub-menu">
-        <li id="diver-level" class="sub-menu-list">Niveaux de plongeur</li>
-        <li id="teach-level" class="sub-menu-list">Niveaux d'enseignement</li>
-        <li id="deep" class="sub-menu-list">Espaces d'évolution</li>
-      </ul>
-    </nav>
-    <div class="gallery">
-      <div class="equipment">
+    <h3>L'équipement du plongeur...</h3>
+    <main class="gallery">
+      <article class="equipment">
         <div class="visible-content">
           <h4>PMT</h4>
           <img src="medias/arrow-down.svg" alt="flèche qui descend" />
@@ -66,8 +60,8 @@
             cas panne d'air le plus souvent pour regagner le bâteau.
           </p>
         </div>
-      </div>
-      <div class="equipment">
+      </article>
+      <article class="equipment">
         <div class="visible-content">
           <h4>Combinaison</h4>
           <img src=" medias/arrow-down.svg" alt="flèche qui descend" />
@@ -80,11 +74,11 @@
             pour le plongeur. Semi-étanche ou étanche, elle permet de plonger
             dans toutes les eaux, froides, tempérées ou chaudes. Épaisse de 3 à
             7mm en moyenne, c'est un des équipements primordial du plongeur.
-            Elle peut, indirectement, servir à se protéger du milieu.
+            Elle sert aussi à se protéger du milieu.
           </p>
         </div>
-      </div>
-      <div class="equipment">
+      </article>
+      <article class="equipment">
         <div class="visible-content">
           <h4>Détendeur</h4>
           <img src="medias/arrow-down.svg" alt="flèche qui descend" />
@@ -104,8 +98,8 @@
             pression ambiante.
           </p>
         </div>
-      </div>
-      <div class="equipment">
+      </article>
+      <article class="equipment">
         <div class="visible-content">
           <h4>Bouteille</h4>
           <img src="medias/arrow-down.svg" alt="flèche qui descend" />
@@ -121,8 +115,8 @@
             pour l'acier et seulement de quelques kg pour l'alu.
           </p>
         </div>
-      </div>
-      <div class="equipment">
+      </article>
+      <article class="equipment">
         <div class="visible-content">
           <h4>Gilet Stabilisateur</h4>
           <img src="medias/arrow-down.svg" alt="flèche qui descend" />
@@ -138,8 +132,8 @@
             ses poches à emmener du matériel durant la plongée.
           </p>
         </div>
-      </div>
-      <div class="equipment">
+      </article>
+      <article class="equipment">
         <div class="visible-content">
           <h4>Ordinateur de plongée</h4>
           <img src="medias/arrow-down.svg" alt="flèche qui descend" />
@@ -148,15 +142,15 @@
           <img src="medias/ordinateur.png" alt="Ordinateur de plongée" />
           <div class="line"></div>
           <p>
-            L'Ordinateur de plongée est un équipement de sécurité du plongeur
+            L'ordinateur de plongée est un équipement de sécurité du plongeur
             lui permettant de connaître sa profondeur, sa durée de plongée, les
             paliers de désaturation à réaliser. L'ordinateur indique également
             la températude de l'eau et pour les plus moderne incopore la gestion
             de l'air évitant au plongeur de ne pas tomber en panne d'air.
           </p>
         </div>
-      </div>
-    </div>
+      </article>
+    </main>
     <footer>
       <p>Guillaume / P1 - WCS - Oct-22</p>
       <div class="social-link">
