--- a/level.html
+++ b/level.html
@@ -33,7 +33,7 @@
         <a href="index.html">Accueil</a>
         <a class="active-tab" href="level.html">Les niveaux</a>
         <a href="equipment.html">L'équipement</a>
-        <a href="spots.html">Spots Européens</a>
+        <a href="spots.html">Spots de plongée</a>
       </nav>
     </header>
     <section class="search">
