add modal popin into the latest page

--- a/equipment.html
+++ b/equipment.html
@@ -57,7 +57,7 @@
             existe des palmes réglables et des palmes chaussantes, c'est à la
             préférence du plongeur. Il existe plusieurs type de masque offrant
             un champ de vision large ou plus rétrécit. Le tuba, lui, servira en
-            cas panne d'air le plus souvent pour regagner le bâteau.
+            cas de panne d'air le plus souvent pour regagner le bâteau.
           </p>
         </div>
       </article>
