--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@
         <input type="search" />
       </div>
     </section>
-    <nav class="sticky-menu-article">
+    <!--class="sticky-menu-article" dans nav ci-dessous-->
+    <nav>
       <ul class="sub-menu">
-        <li id="data-tab" class="sub-menu-list">Quelques chiffres</li>
-        <li id="health-tab" class="sub-menu-list">Les bienfaits</li>
-        <li id="job-tab" class="sub-menu-list">Sport / Métier ?</li>
+        <li class="sub-menu-list">Quelques chiffres</li>
+        <li class="sub-menu-list">Les bienfaits</li>
+        <li class="sub-menu-list">Sport / Métier ?</li>
       </ul>
     </nav>
     <main class="presentation">
@@ -82,7 +83,7 @@
           </div>
         </div>
       </article>
-      <article id="health" class="flex">
+      <article id="health" class="inactive-article-flex">
         <h3>Les bienfaits de la plongée</h3>
         <div class="content">
           <img
@@ -115,7 +116,7 @@
           </div>
         </div>
       </article>
-      <article id="job" class="flex">
+      <article id="job" class="inactive-article-flex">
         <h3>Sport ou Métier ?</h3>
         <div class="content">
           <img
