--- a/level.html
+++ b/level.html
@@ -42,11 +42,11 @@
         <input type="search" />
       </div>
     </section>
-    <nav class="sticky-menu-article">
+    <nav>
       <ul class="sub-menu">
-        <li id="diver-level" class="sub-menu-list">Niveaux de plongeur</li>
-        <li id="teach-level" class="sub-menu-list">Niveaux d'enseignement</li>
-        <li id="deep" class="sub-menu-list">Espaces d'évolution</li>
+        <li class="sub-menu-list">Niveaux de plongeur</li>
+        <li class="sub-menu-list">Niveaux d'enseignement</li>
+        <li class="sub-menu-list">Espaces d'évolution</li>
       </ul>
     </nav>
     <main>
