project finished - somes ajustmet again

--- a/spots.html
+++ b/spots.html
@@ -53,9 +53,30 @@
       </section>
       <section>
         <h3>Les spots de plongée en France</h3>
-        <dialog id="modal">
-          <button id="closemodal">X</button>
-          <article class="spots spot-b">
+        <p class="paragraphe-spots">
+          La plongée en France est l’une des plus attractives en Europe avec des
+          spots de plongée tels que le Parc National de Port-Cros et
+          Porquerolles, le premier parc national marin de France depuis 1963, et
+          leurs sites de plongée les plus célèbres tels que les épaves du Grec
+          et du Donator, ou de la Gabinière et ses mérous, au cœur de la réserve
+          marine. On n’oubliera pas non plus de mentionner le Parc National des
+          Calanques entre Marseille et Cassis. Un peu moins connue, vous pouvez
+          également faire de la plongée vers Sète dans l’étang de Thau. Au
+          niveau difficulté, La France est une destination de plongée bien
+          adaptée en général aux plongeurs expérimentés. Au niveau de la vie
+          marine en France, on retrouve principalement les mérous, les pieuvres,
+          les barracudas, les murènes, les hippocampes et les nudibranches. Au
+          niveau de l’équipement de plongée, en raison de la température de
+          l’eau, on plonge généralement en France en combinaison humide 7 mm. La
+          meilleure période de l’année est souvent de juillet à septembre.
+        </p>
+        <dialog class="modal">
+          <img
+            class="closemodal"
+            src="medias/cross.svg"
+            alt="croix bleu foncée fermeture de modal"
+          />
+          <article class="spots">
             <img
               src="medias/port-cros260.jpg"
               alt="Vue des fonds marins de Port-Cros"
@@ -71,8 +92,13 @@
             </p>
           </article>
         </dialog>
-        <dialog>
-          <article class="spots spot-c">
+        <dialog class="modal">
+          <img
+            class="closemodal"
+            src="medias/cross.svg"
+            alt="croix bleu foncée fermeture de modal"
+          />
+          <article class="spots">
             <img
               src="medias/porquerolles260.jpg"
               alt="Vue des fonds marins de l'île de Porquerolles"
@@ -88,8 +114,13 @@
             </p>
           </article>
         </dialog>
-        <dialog>
-          <article class="spots spot-d">
+        <dialog class="modal">
+          <img
+            class="closemodal"
+            src="medias/cross.svg"
+            alt="croix bleu foncée fermeture de modal"
+          />
+          <article class="spots">
             <img
               src="medias/etang-thau260.jpg"
               alt="Vue des fonds marins de l'étang de Thau"
@@ -104,8 +135,13 @@
             </p>
           </article>
         </dialog>
-        <dialog>
-          <article class="spots spot-e">
+        <dialog class="modal">
+          <img
+            class="closemodal"
+            src="medias/cross.svg"
+            alt="croix bleu foncée fermeture de modal"
+          />
+          <article class="spots">
             <img
               src="medias/calanques260.jpg"
               alt="Vue des fonds marins du Parc National des Calanques"
@@ -121,8 +157,13 @@
             </p>
           </article>
         </dialog>
-        <dialog>
-          <article class="spots spot-f">
+        <dialog class="modal">
+          <img
+            class="closemodal"
+            src="medias/cross.svg"
+            alt="croix bleu foncée fermeture de modal"
+          />
+          <article class="spots">
             <img
               src="medias/crozon260.jpg"
               alt="Vue des fonds marins de la presqu'île de Crozon"
@@ -138,8 +179,13 @@
             </p>
           </article>
         </dialog>
-        <dialog>
-          <article class="spots spot-g">
+        <dialog class="modal">
+          <img
+            class="closemodal"
+            src="medias/cross.svg"
+            alt="croix bleu foncée fermeture de modal"
+          />
+          <article class="spots">
             <img
               src="medias/glenan260.jpg"
               alt="Vue des fonds marins de l'archipel des Glénan"
@@ -156,18 +202,16 @@
             </p>
           </article>
         </dialog>
-        <nav>
-          <ul class="menu-modal">
-            <li id="openmodal">Port-Cros</li>
-            <li>Porquerolles</li>
-            <li>Étang de Thau</li>
-            <li>Parc national des Calanques</li>
-            <li>Presqu'île de Crozon</li>
-            <li>Archipel des Génan</li>
-          </ul>
+        <nav class="menu-modal">
+          <button>Port-Cros</button>
+          <button>Porquerolles</button>
+          <button>Étang de Thau</button>
+          <button>Parc nationale des Calanques</button>
+          <button>Presqu'île de Crozon</button>
+          <button>Archipel des Glénan</button>
         </nav>
         <div class="wrapper">
-          <p class="spot-a">
+          <p class="spot-a paragraphe-spots">
             La plongée en France est l’une des plus attractives en Europe avec
             des spots de plongée tels que le Parc National de Port-Cros et
             Porquerolles, le premier parc national marin de France depuis 1963,
