Introduce CSS variable

--- a/equipment.html
+++ b/equipment.html
@@ -126,7 +126,7 @@
           <div class="line"></div>
           <p>
             Aussi appelé "stab" par les plongeurs, ce gilet gonflable permet au
-            plongeur de se tenir en surface sans difficulté mais aussi de se
+            plongeur de se maintenir en surface sans difficulté mais aussi de se
             stabiliser en profondeur, son poids apparent augmentant avec la
             profondeur. Le gilet sert aussi à y fixer la bouteille et grâce à
             ses poches à emmener du matériel durant la plongée.
@@ -146,7 +146,7 @@
             lui permettant de connaître sa profondeur, sa durée de plongée, les
             paliers de désaturation à réaliser. L'ordinateur indique également
             la températude de l'eau et pour les plus moderne incopore la gestion
-            de l'air évitant au plongeur de ne pas tomber en panne d'air.
+            de l'air évitant au plongeur de tomber en panne d'air.
           </p>
         </div>
       </article>
