--- a/spots.html
+++ b/spots.html
@@ -206,7 +206,7 @@
           <button>Port-Cros</button>
           <button>Porquerolles</button>
           <button>Étang de Thau</button>
-          <button>Parc nationale des Calanques</button>
+          <button>Parc national des Calanques</button>
           <button>Presqu'île de Crozon</button>
           <button>Archipel des Glénan</button>
         </nav>
