add JS srcoll down on click on arrow

--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
         <h2>Rechercher une plongée, un stage...</h2>
         <input type="search" />
       </div>
+      <img class="bubble" src="medias/bubble.gif" alt="bulles animées" />
+      <img class="down" src="medias/down.svg" alt="Flèche pour descendre" />
     </section>
-    <!--class="sticky-menu-article" dans nav ci-dessous-->
     <nav>
       <ul class="sub-menu">
         <li class="sub-menu-list">Quelques chiffres</li>
