--- a/spots.html
+++ b/spots.html
@@ -41,6 +41,8 @@
         <h2>Rechercher une plongée, un stage...</h2>
         <input type="search" />
       </div>
+      <img class="bubble" src="medias/bubble.gif" alt="bulles animées" />
+      <img class="down" src="medias/down.svg" alt="Flèche pour descendre" />
     </section>
     <main>
       <section>
