adjustment after test mobile on github.io

--- a/level.html
+++ b/level.html
@@ -52,10 +52,10 @@
       </ul>
     </nav>
     <main>
-      <section id="diver" class="disp-active">
+      <section class="disp-active">
         <div>
           <h3>Quelques informations sur les niveaux de plongée</h3>
-          <p>
+          <p class="diver">
             Si vous avez déjà fait votre baptême de plongée ou que vous vous
             intéressez de plus en plus à la pratique de cette activité
             fascinante, vous avez certainement entendu parler des différents
@@ -177,10 +177,10 @@
           </div>
         </div>
       </section>
-      <section id="teacher" class="disp-inactive">
+      <section class="disp-inactive">
         <div>
           <h3>Enseigner la plongée !</h3>
-          <p>
+          <p class="teacher">
             Si vous êtes un plongeur expérimenté, peut-être avez-vous l'envie de
             partager votre passion en l'enseignant à d'autres plongeurs. Il
             existe quatre niveaux d'enseignement, de l'initiateur club (en
