--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     </section>
     <nav>
       <ul class="sub-menu">
-        <li class="sub-menu-list">Quelques chiffres</li>
-        <li class="sub-menu-list">Les bienfaits</li>
-        <li class="sub-menu-list">Sport / Métier ?</li>
+        <li>Quelques chiffres</li>
+        <li>Les bienfaits</li>
+        <li>Sport / Métier ?</li>
       </ul>
     </nav>
     <main class="presentation">
