--- a/level.html
+++ b/level.html
@@ -46,9 +46,9 @@
     </section>
     <nav>
       <ul class="sub-menu">
-        <li class="sub-menu-list">Niveaux de plongeur</li>
-        <li class="sub-menu-list">Niveaux d'enseignement</li>
-        <li class="sub-menu-list">Espaces d'évolution</li>
+        <li>Niveaux de plongeur</li>
+        <li>Niveaux d'enseignement</li>
+        <li>Espaces d'évolution</li>
       </ul>
     </nav>
     <main>
