adjust font-size search bar and position bubble

--- a/index.html
+++ b/index.html
@@ -41,14 +41,16 @@
         <h2>Rechercher une plongée, un stage...</h2>
         <input type="search" />
       </div>
-      <img class="bubble" src="medias/bubble.gif" alt="bulles animées" />
-      <img class="down" src="medias/down.svg" alt="Flèche pour descendre" />
+      <div class="bubble-position">
+        <img class="bubble" src="medias/bubble.gif" alt="bulles animées" />
+        <img class="down" src="medias/down.svg" alt="Flèche pour descendre" />
+      </div>
     </section>
     <nav>
       <ul class="sub-menu">
-        <li>Quelques chiffres</li>
-        <li>Les bienfaits</li>
-        <li>Sport / Métier ?</li>
+        <li>Quelques chiffres...</li>
+        <li>Les bienfaits de la plongée</li>
+        <li>Plongée: Sport ou Métier ?</li>
       </ul>
     </nav>
     <main class="presentation">
@@ -62,7 +64,7 @@
           <div class="paragraphe">
             <p>
               360000 personnes pratiquent la plongée en France, 149000 sont
-              licenciés dans un club représentant 45% des pratiquants. La
+              licenciées dans un club représentant 45% des pratiquants. La
               proportion de femmes parmi les plongeurs français est de 30%
               tandis que les enfants (-14 ans) représentent 21% des plongeurs.
               Nous comptons cependant 83 à 89% de moniteurs masculins donc très
