--- a/spots.html
+++ b/spots.html
@@ -41,8 +41,10 @@
         <h2>Rechercher une plongée, un stage...</h2>
         <input type="search" />
       </div>
-      <img class="bubble" src="medias/bubble.gif" alt="bulles animées" />
-      <img class="down" src="medias/down.svg" alt="Flèche pour descendre" />
+      <div class="bubble-position">
+        <img class="bubble" src="medias/bubble.gif" alt="bulles animées" />
+        <img class="down" src="medias/down.svg" alt="Flèche pour descendre" />
+      </div>
     </section>
     <main>
       <section>
