--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
   </head>
   <body>
-    <header class="header-flex">
+    <header>
       <a href="index.html"
         ><img class="logo" src="medias/logo.png" alt="logo du site"
       /></a>
