Add img equipment to equipment page and smooth scroll Js

--- a/equipment.html
+++ b/equipment.html
@@ -47,6 +47,12 @@
       </div>
     </section>
     <h3>L'équipement du plongeur...</h3>
+    <figure class="equipfigure">
+      <img
+        src="medias/equipement.jpg"
+        alt="inventaire de l'équipement de base d'un plongeur"
+      />
+    </figure>
     <main class="gallery">
       <article class="equipment">
         <div class="visible-content">
