delete search bar on page 2 - 3 - 4 and header in sticky position

--- a/equipment.html
+++ b/equipment.html
@@ -17,7 +17,7 @@
     />
   </head>
   <body>
-    <header>
+    <header class="sticky-mode">
       <a href="index.html"
         ><img class="logo" src="medias/logo.png" alt="logo du site"
       /></a>
@@ -36,16 +36,6 @@
         <a href="spots.html">Spots de plongée</a>
       </nav>
     </header>
-    <section class="search">
-      <div>
-        <h2>Rechercher une plongée, un stage...</h2>
-        <input type="search" />
-      </div>
-      <div class="bubble-position">
-        <img class="bubble" src="medias/bubble.gif" alt="bulles animées" />
-        <img class="down" src="medias/down.svg" alt="Flèche pour descendre" />
-      </div>
-    </section>
     <h3>L'équipement du plongeur...</h3>
     <figure class="equipfigure">
       <img
