Create main.js - modify color text of menu-list desktop

--- a/equipment.html
+++ b/equipment.html
@@ -167,6 +167,7 @@
         <img src="medias/scrolltotop.svg" alt="Retourner en haut" />
       </div>
     </footer>
+    <script src="main.js"></script>
     <script src="script-equipment.js"></script>
   </body>
 </html>
