--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
         <img src="medias/scrolltotop.svg" alt="Retourner en haut" />
       </div>
     </footer>
+    <script src="main.js"></script>
     <script src="script-home.js"></script>
   </body>
 </html>
