--- a/level.html
+++ b/level.html
@@ -306,6 +306,7 @@
         <img src="medias/scrolltotop.svg" alt="Retourner en haut" />
       </div>
     </footer>
+    <script src="main.js"></script>
     <script src="script-level.js"></script>
   </body>
 </html>
