--- a/spots.html
+++ b/spots.html
@@ -344,6 +344,7 @@
         <img src="medias/scrolltotop.svg" alt="Retourner en haut" />
       </div>
     </footer>
+    <script src="main.js"></script>
     <script src="script-spots.js"></script>
   </body>
 </html>
