--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Découvrez la plongée sous-marine à travers mes articles présentant cette activité sous divers aspects"
+      content="Découvrez la plongée sous-marine à travers différents sujets et aspects de cette activité"
     />
     <title>Découverte de la plongée sous-marine</title>
     <link rel="shortcut icon" type="image/png" href="medias/favicon.png" />
